Index modifications with impacted equipments (#609)
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>
Co-authored-by: Slimane AMAR <amarsli@gm0winl104.bureau.si.interne>
Co-authored-by: Antoine Bouhours <antoine.bouhours@rte-france.com>